# wscreensaver-bridge

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  wayland.rs  xdg_screensaver.rs
